--- a/index.html
+++ b/index.html
@@ -297,7 +297,8 @@
 
             <div class="organizer-card">
                 <div class="organizer-image">
-                    <div class="organizer-image-placeholder">ESN-EYE Łódź Logo</div>
+                    <!--<div class="organizer-image-placeholder">ESN-EYE Łódź Logo</div>-->
+					<img src="logo_eye.jpg" alt="ESN-EYE Łódź Logo">
                 </div>
                 <div class="organizer-content">
                     <h3>ESN-EYE Łódź</h3>
